# c64-anim-tool

./: .clang-format  .gitignore  CLAUDE.md  CMakeLists.txt  CMakePresets.json  Makefile  Planning_and_rambling.txt  README.md  animation-tool.spec  download_stb.bat  download_stb.sh  fix_imports.py  main.spec  nuitka-crash-report.xml  nuitka-project.toml  pyproject.toml  requirements.txt  setup.py  sklbunny-nodding-reissue.prg  warning.prg
.github/workflows/: 64tass.yaml  build_executables.yaml  create_release.yaml
bins/linux/: 64tass
bins/macos/: 64tass
external-sources/64tass/: Makefile  version.h
old/python_app/: MANIFEST.in  requirements.txt
old/python_app/bins/macos/: 64tass
old/python_app/src/animation_converter/: cli_parser.py  lzma_codec.py  main.py  packer.py  rle_codec.py
old/python_app/src/resources/test-program/: fill_color_template.asm  player_test_setup.asm
scripts/: generate_hamming_lookup.py
src/anim/: AnimSourceData.cpp  AnimSourceData.h  BitmapConverter.cpp  BitmapConverter.h  ChannelCharacterRam.cpp  ChannelCharacterRam.h  ChannelColorAnimation.h  ChannelColorRAM.h  ChannelScreenColor.h  ChannelScrollFullScreen.h  ChannelSprite.h  Charset.cpp  Charset.h  CharsetReader.cpp  CharsetReader.h  Defer.h  Frame.cpp  Frame.h  GifReader.cpp  GifReader.h  GlobalSingleton.h  PetsciiReader.cpp  PetsciiReader.h  Utils.h  anim_source_data_types.cpp  anim_source_data_types.h  frame.cpp
src/anim/test/: char_distance.cpp  charset_reduction.cpp
src/animation_converter/: anim_reorder.py  build_utils.py  cli_parser.py  color_data_utils.py  compress.py  gui.py  logger.py  lzma_codec.py  main.py  packer.py  packer_config.py  petscii.py  rle_codec.py  scroller.py  utils.py
src/animation_converter/gui/: __init__.py  app.py  dialogs.py  logging_setup.py  models.py  panels.py
src/cli/: main.cpp
src/cli/test/: test_cli.cpp
src/config/: config.cpp  config.h  test_config.cpp
src/config/test/: test_config.cpp
src/gif/: gif_processor.cpp  gif_processor.h  stb_impl.cpp
src/gif/test/: test_gif_processor.cpp
src/petscii/: petscii.cpp  petscii.h
src/resources/test-program/: Makefile  fill_color_template.asm  player.asm  player_50fps_test.asm  player_test_setup.asm
